tweaked - about title

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}About Henkie{% endblock %}
-{% block meta_description %}This is the website of Henkie{% endblock %}
+{% block title %}About Henkie Dentist to the stars {% endblock %}
+{% block meta_description %}This is the website of Henkie the greatest dentist!{% endblock %}
 
 {% block content %}
 
